# claude_stuff

./: .gitignore  AGENTS.md  CLAUDE.md
changes_detector/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
changes_detector/config/: Cargo-test.toml  mutants-integration.toml  mutants.toml
changes_detector/features/: change_detector.feature  flare_source.feature  monitor_spawner.feature  monitor_store.feature  strip_tags.feature
changes_detector/src/: config.rs  detector.rs  lib.rs  main.rs  monitor.rs  runner.rs  telegram.rs  watcher.rs
changes_detector/src/source/: browser.rs  file.rs  flare.rs  http.rs  mod.rs  rcdeportivo.rs
changes_detector/tests/integration/: flare_source.rs  monitor_store.rs
changes_detector/tests/unit/: change_detector.rs  monitor_spawner.rs  strip_tags.rs
changes_detector/watched/: example.txt
fantastic_battle/: .env.example  Cargo.toml  Dockerfile  Makefile  PLAN.md  PLAN_PHASE4_REMAINING.md  docker-compose.yml
fantastic_battle/config/: Cargo-test.toml
fantastic_battle/features/: battle_api.feature  battle_repository.feature  battle_service.feature  error_handling.feature  game_world_api.feature  game_world_service.feature  npc_name_generator.feature  question_asker.feature  server_health.feature
fantastic_battle/src/: container.rs  main.rs
fantastic_battle/src/infrastructure/: mod.rs
fantastic_battle/tests/integration/: battle_api.rs  battle_repository.rs  error_handling.rs  game_world_api.rs  http_server.rs  npc_name_generator.rs  question_asker.rs
fantastic_battle/tests/unit/: battle_service.rs  game_world_service.rs
flights_scanner/: .env.example  Cargo.toml  Dockerfile  Makefile  README.md
flights_scanner/src/: main.rs
flights_scanner/src/application/: error.rs  mod.rs  search_flights.rs
flights_scanner/src/domain/: error.rs  mod.rs
host_controller/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh
host_controller/config/: Cargo-test.toml  mutants-integration.toml  mutants.toml
host_controller/features/: authorization.feature  config.feature  formatter.feature  http_gateway.feature  request.feature  ssh_executor.feature  system.feature  telegram_bot.feature
host_controller/src/: authorizer.rs  config.rs  formatter.rs  lib.rs  main.rs  request.rs
host_controller/src/executor/: mod.rs  ssh.rs  system.rs
host_controller/src/telegram/: http.rs  mod.rs
host_controller/tests/integration/: http_gateway.rs  system.rs
host_controller/tests/unit/: authorization.rs  config.rs  formatter.rs  request.rs  ssh_executor.rs  telegram_bot.rs
prices_comparer/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
prices_comparer/.claude/commands/: normalize_order.md
prices_comparer/capture/: README.md  glovo_token.py
prices_comparer/config/: Cargo-test.toml  mutants-integration.toml  mutants.toml
prices_comparer/features/: basket_reply.feature  deepseek_normalizer.feature  deepseek_selector.feature  dia_source.feature  glovo_refresh.feature  glovo_source.feature  lidl_source.feature  mercadona_source.feature  order_normalization.feature  order_reply.feature  price_comparison.feature  telegram_bot.feature  token_store.feature
prices_comparer/src/: basket.rs  bot.rs  comparer.rs  lib.rs  main.rs  normalizer.rs  telegram.rs  token_store.rs
prices_comparer/src/source/: dia.rs  glovo.rs  glovo_refresh.rs  lidl.rs  mercadona.rs  mod.rs  price.rs
prices_comparer/tests/integration/: deepseek_normalizer.rs  deepseek_selector.rs  dia_source.rs  glovo_refresh.rs  glovo_source.rs  (+4 more)
voice_assistant/: .dockerignore  .env.example  .gitignore  Cargo-test.toml  Cargo.toml  Dockerfile  Makefile  README.md  TUTORIAL.md  debug_audio.py  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  run.sh
voice_assistant/config/: Cargo-test.toml  docker-compose.test.yml  mutants.toml
voice_assistant/features/: audio_capturer.feature  audio_integration.feature  audio_processing.feature  audio_speaker.feature  claude_cli_integration.feature  claude_handler_integration.feature  claude_handler_token_logging.feature  cli_direct_order.feature  container_wiring.feature  conversation_flow.feature  deepseek_order_handler.feature  deepseek_tool_calling.feature  google_sheets_integration.feature  google_speech_api_key.feature  interruptible_speech.feature  order_capture.feature  piper_tts.feature  prod_restart_policy.feature  rust_native_audio.feature  search_prompt_assembly.feature  search_rate_limiting.feature  session_continuity.feature  skill_routing.feature  speaker_integration.feature  speech_integration.feature  speech_recognition_integration.feature  telegram_bot_integration.feature  telegram_gateway_error_handling.feature  text_synthesizer.feature  transcriber.feature  transcriber_integration.feature  tts_http_integration.feature  tts_pipeline.feature  url_fetch_tool.feature  voice_listener_service.feature  wake_word_detection.feature  web_search_tool.feature  whisper_stt.feature
voice_assistant/python/: Makefile
voice_assistant/rust/: .env.example  .gitignore  Cargo-test.toml  Cargo.toml  Dockerfile  Makefile  build.rs  docker-compose.test.yml  run.sh  system_prompt.example
voice_assistant/searxng/: settings.yml
voice_assistant/src/: cli.rs  container.rs  lib.rs  main.rs
voice_assistant/tests/: session_continuity.rs  skill_routing.rs  test_integration.py  transcriber_integration.rs  wake_word_detection.rs
(+382 files in other folders)
