[package]
name = "changes_detector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "changes_detector"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
reqwest      = { version = "0.12", features = ["json"], default-features = false, features = ["rustls-tls", "json"] }
serde_json   = "1"
dotenvy      = "0.15"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
similar      = "2"
sha2         = "0.10"
hex          = "0.4"
anyhow       = "1"
