[package]
name = "fantastic_battle"
version = "0.1.0"
edition = "2021"

[lib]
name = "fantastic_battle"
path = "src/lib.rs"

[[bin]]
name = "fantastic_battle_server"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
shaku = { version = "0.6", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

