[package]
name = "fantastic_battle"
version = "0.1.0"
edition = "2021"

[lib]
name = "fantastic_battle"
path = "src/lib.rs"

[[bin]]
name = "fantastic_battle_server"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

