[package]
name = "flights_scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"

[dev-dependencies]
rstest = "0.23"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
wiremock = "0.6"
