[package]
name = "host_controller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "host_controller"
path = "src/main.rs"

[lib]
name = "host_controller"
path = "src/lib.rs"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
dotenvy      = "0.15"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow       = "1"
async-trait  = "0.1"
