[package]
name = "voice_assistant"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voice_assistant"
path = "src/main.rs"

[lib]
name = "voice_assistant"
path = "src/lib.rs"

[dependencies]
regex      = "1"
strsim     = "0.11"
rustfft    = "6"
ureq       = { version = "2", features = ["json", "native-tls"] }
whichlang  = "0.1"
serde_json = "1"
shaku      = { version = "0.6", features = ["derive"] }
cpal       = "0.15"
rodio      = "0.18"
deepseek_client = { path = "./deepseek_client" }
skill_loader = { path = "./skill_loader" }
